# auto-compressor

./: Cargo.toml  config.example.toml
.github/workflows/: build.yml
src/: compress.rs  config.rs  main.rs  windows.rs
src/windows/: lock.rs  process.rs
